tests/ui/test_unknown_visibility.stderr
error: Unknown field: `garbage`
 --> $DIR/test_unknown_visibility.rs:4:13
  |
4 | #[shorthand(visibility(garbage))]
  |             ^^^^^^^^^^^^^^^^^^^
